--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,8 @@
 version: "3.9"
 
 services:
-  web:
-    build: .
-    command: python manage.py runserver 0.0.0.0:8000
-    volumes:
-      - .:/app
-    ports:
-      - "8000:8000"
-    depends_on:
-      - postgres
-
-  postgres:
-    image: postgres:15
+  db:
+    image: postgres:latest
     environment:
       POSTGRES_DB: property_db
       POSTGRES_USER: postgres
@@ -22,5 +12,24 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+
+  web:
+    build: .
+    command: python manage.py runserver 0.0.0.0:8000
+    volumes:
+      - .:/app
+    ports:
+      - "8000:8000"
+    depends_on:
+      - db
+      - redis
+
 volumes:
   postgres_data:
+  redis_data:
